# object_detection_lib

./: .gitmodules  CMakeLists.txt  README.md  train.ipynb
cmake-modules/: FindOpenCV.cmake
include/: yolo.hpp
src/: CMakeLists.txt  temp.py  yolo.cpp
src/cmake-modules/: FindMinizip.cmake  FindPython3_FiftyOne.cmake  FindTBB.cmake
src/include/: yolo.hpp
src/internal/: annotations.cpp  cfg.cpp  cfg.hpp  http.hpp  internal.cpp  internal.hpp
src/models/: yolov3.h
src/src_cli/: main.cpp
src/src_lib/: image.cpp  image.hpp  yolo.cpp
src/src_lib/internal/: annotations.cpp  annotations.hpp  cfg.cpp  cfg.hpp  http.cpp  http.hpp  http_server.cpp  http_server.hpp  internal.cpp  internal.hpp  progress_watch.cpp  progress_watch.hpp  python.cpp  python.hpp  server.cpp  server.hpp  zip.cpp  zip.hpp
